--- a/html/courses.html
+++ b/html/courses.html
@@ -48,57 +48,57 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Контакты</a>
                         </li>
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="headOfCourse">
-            <div class="textHeadCourse">
+        <div class="head-course">
+            <div class="text-head-course">
                 <div class="description">
                     Курс
                 </div>
                 <h1><b>Графический дизайнер с нуля до PRO</b></h1>
-                <img src="../images/iconCourses.png" class="iconHeadCourseMobile" alt="Course icon">
+                <img src="../images/iconCourses.png" class="icon-head-course-mobile" alt="Course icon">
                 <div class="description">
                     Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                 </div>
-                <button type="button" name="button" class="greenButton">Записаться на курс</button>
+                <button type="button" name="button" class="green-button">Записаться на курс</button>
             </div>
-            <img src="../images/iconCourses.png" class="iconHeadCourseComputer" alt="Course icon">
+            <img src="../images/iconCourses.png" class="icon-head-course-computer" alt="Course icon">
         </div>
         <div class="info">
             <ul>
-                <li>Длительность <br> <span class="addInfo">8 месяцев</span></li>
+                <li>Длительность <br> <span class="add-info">8 месяцев</span></li>
 
-                <li>Онлайн <br> <span class="addInfo">в удобное время</span></li>
+                <li>Онлайн <br> <span class="add-info">в удобное время</span></li>
 
-                <li>Практика <br> <span class="addInfo">во время курса</span></li>
+                <li>Практика <br> <span class="add-info">во время курса</span></li>
 
-                <li>Доступ к курсу <br> <span class="addInfo">навсегда</span></li>
+                <li>Доступ к курсу <br> <span class="add-info">навсегда</span></li>
 
             </ul>
-            <div class="textInfo">
+            <div class="text-info">
                 <b>Графический дизайнер</b> создаёт фирменный стиль компании: рисует логотипы, подбирает паттерны и шрифты. Оформляет печатную продукцию — постеры, брошюры, флаеры
                 и презентации.<br><br>
                 Работа графическим дизайнером — это симбиоз творчества и функционального подхода. С помощью классных визуальных решений вы будете создавать графику, которая точно передаст характер бренда и поможет людям узнать компанию среди сотен
                 других.
             </div>
             <h1><b>Кому подойдёт этот курс</b></h1>
-            <div class="usersCourse">
-                <div class="userCourse">
+            <div class="users-course">
+                <div class="user-course">
                     <img src="../images/profileUser.png" class="img-fluid w-5" alt="Profile">
-                    <div class="textUserCourse">
+                    <div class="textuser-course">
                         <h5>Новичкам в дизайне</h5>
                         Вы освоите Photoshop, Illustrator, InDesign, Adobe Color. Сможете разрабатывать фирменный стиль и дизайн-концепции для бренда, вести задачи от брифа до презентации. Отточите навыки на реальных проектах — сможете зарабатывать
                         уже во время курса.
                     </div>
                 </div>
-                <div class="userCourse">
+                <div class="user-course">
                     <img src="../images/profileUser.png" class="img-fluid" alt="Profile">
-                    <div class="textUserCourse">
+                    <div class="textuser-course">
                         <h5>Дизайнерам смежных сфер</h5>
                         Вы погрузитесь в специфику графического дизайна: узнаете,
                         как создаются элементы айдентики, разберётесь в брендинге. Расширите список задач, чтобы больше зарабатывать на фрилансе или эффективнее работать в команде.
@@ -112,7 +112,7 @@
             <div class="rate">
                 <h2>Я сам</h2>
                 <img src="../images/lineRate.png" alt="line">
-                <div class="textRate">
+                <div class="text-rate">
                     <div class="">
                         4 модуля
                     </div>
@@ -141,46 +141,46 @@
                 <div class="price">
                     5 999 руб.
                 </div>
-                <button type="button" name="button" class="buttonRate">Выбрать тариф</button>
+                <button type="button" name="button" class="button-rate">Выбрать тариф</button>
             </div>
             <div class="rate">
                 <h2>C куратором</h2>
                 <img src="../images/lineRate.png" alt="line">
-                <div class="textRate">
-                    <div class="">
+                <div class="text-rate">
+                    <div>
                         4 модуля
                     </div>
-                     <div class="">
+                     <div>
                          14 практических уроков
                      </div>
-                    <div class="">
+                    <div>
                         Общий чат студентов
                     </div>
-                    <div class="">
+                    <div>
                         В подарок при оплате бонусный урок “Лалала”
                     </div>
-                    <div class="">
+                    <div>
                         4 модуля
                     </div>
-                    <div class="">
+                    <div>
                         14 практических уроков
                     </div>
-                    <div class="">
+                    <div>
                         Общий чат студентов
                     </div>
-                    <div class="">
+                    <div>
                         В подарок при оплате бонусный урок “Лалала”
                     </div>
                 </div>
                 <div class="price">
                     15 999 руб.
                 </div>
-                <button type="button" name="button" class="buttonRate">Выбрать тариф</button>
+                <button type="button" name="button" class="button-rate">Выбрать тариф</button>
             </div>
             <div class="rate">
                 <h2>VIP</h2>
                 <img src="../images/lineRate.png" alt="line">
-                <div class="textRate">
+                <div class="text-rate">
                     <div class="">
                         4 модуля
                     </div>
@@ -209,7 +209,7 @@
                 <div class="price">
                     50 999 руб.
                 </div>
-                <button type="button" name="button" class="buttonRate">Выбрать тариф</button>
+                <button type="button" name="button" class="button-rate">Выбрать тариф</button>
             </div>
         </div>
     </div>
@@ -279,20 +279,20 @@
     <div class="container">
         <div class="contacts">
             <h1>Контакты</h1>
-            <div class="contactsBlocks">
-                <div class="textContacts">
-                    <div class="contactsBigText">Вам нужна помощь в подборе курса?
+            <div class="contacts-blocks">
+                <div class="text-contacts">
+                    <div class="contacts-big-text">Вам нужна помощь в подборе курса?
                         Свяжитесь с нами!</div>
                     звоните:
-                    <div class="contactsBigText">+7 999 954-77-82</div>
+                    <div class="contacts-big-text">+7 999 954-77-82</div>
                     Пишите:
-                    <div class="contactsBigText">poctha@gmail.com</div>
+                    <div class="contacts-big-text">poctha@gmail.com</div>
                 </div>
-                <form class="getContacts">
+                <form class="get-contacts">
                     <input type="text" name="name" class="form-control" value="" placeholder="Ваше имя" style="height: 3rem;">
                     <input type="text" name="email" class="form-control" value="" placeholder="Ваш e-mail" style="height: 3rem;">
                     <input type="text" name="comment" class="form-control" value="" placeholder="ваш комментарий" style="height: 10rem;">
-                    <button type="button" name="button" class="greenButton">Отправить</button>
+                    <button type="button" name="button" class="green-button">Отправить</button>
                     <div class="conditions">
                         Нажимая кнопку, вы соглашаетесь с условиями политики обработки персональных данных
                     </div>
@@ -301,22 +301,22 @@
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
-                <div class="computerFooter">
+                <div class="computer-footer">
                     <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
                         <li>EDUSTRUM</li>
                         <li class="nav-item">
                             +7 999 954-77-82 <br>
                             pochta@gmail.com
                         </li>
-                        <li><button type="button" name="button" class="socialButton">vk</button></li>
-                        <li><button type="button" name="button" class="socialButton">tg</button></li>
-                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
                         <li class="nav-item">
                             Политика <br> конфиденциальности
                         </li>
                     </ul>
                 </div>
-                <div class="mobileFooter">
+                <div class="mobile-footer">
                     <div class="mt-3">
                         EDUSTRUM
                     </div>
@@ -339,9 +339,9 @@
                         </div>
                     </div>
                     <ul class="nav justify-content-start flex-row mb-3 gap-4">
-                        <li><button type="button" name="button" class="socialButton">vk</button></li>
-                        <li><button type="button" name="button" class="socialButton">tg</button></li>
-                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
                     </ul>
                 </div>
         </footer>
