--- a/html/index.html
+++ b/html/index.html
@@ -48,50 +48,50 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Контакты</a>
                         </li>
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="firstBlock">
-            <div class="mobileHeader">
+        <div class="first-block">
+            <div class="mobile-header">
                 <h1>Учим профессиям и навыкам</h1>
             </div>
             <img src="../images/manWithComputer.png" alt="main picture" class="mainPicture">
             <div class="container">
-                <div class='textInPic'>
+                <div class='text-in-pic'>
                     <h1>Учим профессиям и навыкам</h1>
                     <ul>
                         <li>Раскройте свои сильные стороны</li>
                         <li>Выберите вектор развития</li>
                         <li>Действуйте!</li>
                     </ul>
-                    <button class="greenButton">Получить курс</button>
+                    <button class="green-button">Получить курс</button>
                 </div>
             </div>
-            <div class="mobileHeader">
+            <div class="mobile-header">
                 <h1>Почему мы?</h1>
             </div>
-            <div class="listOfPros">
-                <div class="coupleOfProps">
-                    <div class="circleWithText">
-                        <div class="imageInCircle">
+            <div class="list-pros">
+                <div class="couple-pros">
+                    <div class="circle-text">
+                        <div class="img-circle">
                             <img src="../images/muscle.png" alt="muscle">
                         </div>
-                        <div class="textForProps">
+                        <div class="text-pros">
                             <b>Sample Headline</b>
                             <p>
                                 Есть бесплатные курсы
                             </p>
                         </div>
                     </div>
-                    <div class="circleWithText">
-                        <div class="imageInCircle">
+                    <div class="circle-text">
+                        <div class="img-circle">
                             <img src="../images/atom.png" alt="atom">
                         </div>
-                        <div class="textForProps">
+                        <div class="text-pros">
                             <b>Sample Headline</b>
                             <p>
                                 50+ исследований проводим ежегодно, чтобы улучшить курсы
@@ -99,23 +99,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="coupleOfProps">
-                    <div class="circleWithText">
-                        <div class="imageInCircle">
+                <div class="couple-pros">
+                    <div class="circle-text">
+                        <div class="img-circle">
                             <img src="../images/studentMale.png" alt="student">
                         </div>
-                        <div class="textForProps">
+                        <div class="text-pros">
                             <b>Sample Headline</b>
                             <p>
                                 Для всех возрастов и уровней подготовки
                             </p>
                         </div>
                     </div>
-                    <div class="circleWithText">
-                        <div class="imageInCircle">
+                    <div class="circle-text">
+                        <div class="img-circle">
                             <img src="../images/lightOn.png" alt="lamp">
                         </div>
-                        <div class="textForProps">
+                        <div class="text-pros">
                             <b>Sample Headline</b>
                             <p>
                                 Только востребованные навыки и задания для их отработки
@@ -123,23 +123,23 @@
                         </div>
                     </div>
                 </div>
-                <div class="coupleOfProps">
-                    <div class="circleWithText">
-                        <div class="imageInCircle">
+                <div class="couple-pros">
+                    <div class="circle-text">
+                        <div class="img-circle">
                             <img src="../images/homeOffice.png" alt="computer">
                         </div>
-                        <div class="textForProps">
+                        <div class="text-pros">
                             <b>Sample Headline</b>
                             <p>
                                 Занимайтесь в любом месте и в удобное время
                             </p>
                         </div>
                     </div>
-                    <div class="circleWithText">
-                        <div class="imageInCircle">
+                    <div class="circle-text">
+                        <div class="img-circle">
                             <img src="../images/peopleWorkingTogether.png" alt="talk">
                         </div>
-                        <div class="textForProps">
+                        <div class="text-pros">
                             <b>Sample Headline</b>
                             <p>
                                 Общение с экспертами в Telegram. ​Мы будем рядом и не дадим остановиться на полпути
@@ -155,10 +155,10 @@
             <h1>
                 Курсы
             </h1>
-            <div class="blocksOfCourses">
-                <div class="devCourses">
+            <div class="blocks-courses">
+                <div class="dev-courses">
                     <div class="course">
-                        <div class="textCourse">
+                        <div class="text-course">
                             <div>
                                 Курсы
                                 <h3>Python Basic</h3>
@@ -168,7 +168,7 @@
                         <img src="../images/iconPython.png" alt="Python">
                     </div>
                     <div class="course">
-                        <div class="textCourse">
+                        <div class="text-course">
                             <div>
                                 Курс
                                 <h3>Java-разработчик</h3>
@@ -179,9 +179,9 @@
                         <img src="../images/iconJava.png" alt="Java">
                     </div>
                 </div>
-                <div class="designCourses">
+                <div class="design-courses">
                     <div class="course">
-                        <div class="textCourse">
+                        <div class="text-course">
                             <div>
                                 Курс
                                 <h3>Графический дизайнер с нуля до PRO</h3>
@@ -192,7 +192,7 @@
                         <img src="../images/iconDesign.png" alt="Designer">
                     </div>
                     <div class="course">
-                        <div class="textCourse">
+                        <div class="text-course">
                             <div>
                                 Курс
                                 <h3>Дизайнер интерьеров с нуля до PRO</h3>
@@ -204,8 +204,8 @@
                     </div>
                 </div>
             </div>
-            <div class="blockForButtonCourses">
-                <button type="button" name="button" class="moreCourses">Еще курсы</button>
+            <div class="block-buton-courses">
+                <button type="button" name="button" class="more-courses">Еще курсы</button>
             </div>
 
         </div>
@@ -213,8 +213,8 @@
     <div class="container">
         <div id="news">
             <h1>Новости</h1>
-            <div class="carouselNewsContainerUpper">
-                <div class="carouselNewsContainer">
+            <div class="carousel-news-container-upper">
+                <div class="carousel-news-container">
                     <div id="carouselNews" class="carousel" data-bs-ride="carousel">
                         <div class="carousel-indicators">
                             <button type="button" data-bs-target="#carouselNews" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -289,7 +289,7 @@
             </div>
         </div>
         <div class="about" id="about">
-            <div class="textAbout">
+            <div class="text-about">
                 <h1>
                     О нас
                 </h1>
@@ -374,20 +374,20 @@
     <div class="container">
         <div class="contacts" id="contacts">
             <h1>Контакты</h1>
-            <div class="contactsBlocks">
-                <div class="textContacts">
-                    <div class="contactsBigText">Вам нужна помощь в подборе курса?
+            <div class="contacts-blocks">
+                <div class="text-contacts">
+                    <div class="contacts-big-text">Вам нужна помощь в подборе курса?
                         Свяжитесь с нами!</div>
                     звоните:
-                    <div class="contactsBigText">+7 999 954-77-82</div>
+                    <div class="contacts-big-text">+7 999 954-77-82</div>
                     Пишите:
-                    <div class="contactsBigText">poctha@gmail.com</div>
+                    <div class="contacts-big-text">poctha@gmail.com</div>
                 </div>
-                <form class="getContacts">
+                <form class="get-contacts">
                     <input type="text" name="name" class="form-control" value="" placeholder="Ваше имя" style="height: 3rem;">
                     <input type="text" name="email" class="form-control" value="" placeholder="Ваш e-mail" style="height: 3rem;">
                     <input type="text" name="comment" class="form-control" value="" placeholder="ваш комментарий" style="height: 10rem;">
-                    <button type="button" name="button" class="greenButton">Отправить</button>
+                    <button type="button" name="button" class="green-button">Отправить</button>
                     <div class="conditions">
                         Нажимая кнопку, вы соглашаетесь с условиями политики обработки персональных данных
                     </div>
@@ -396,22 +396,22 @@
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
-                <div class="computerFooter">
+                <div class="computer-footer">
                     <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
                         <li>EDUSTRUM</li>
                         <li class="nav-item">
                             +7 999 954-77-82 <br>
                             pochta@gmail.com
                         </li>
-                        <li><button type="button" name="button" class="socialButton">vk</button></li>
-                        <li><button type="button" name="button" class="socialButton">tg</button></li>
-                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
                         <li class="nav-item">
                             Политика <br> конфиденциальности
                         </li>
                     </ul>
                 </div>
-                <div class="mobileFooter">
+                <div class="mobile-footer">
                     <div class="mt-3">
                         EDUSTRUM
                     </div>
@@ -434,9 +434,9 @@
                         </div>
                     </div>
                     <ul class="nav justify-content-start flex-row mb-3 gap-4">
-                        <li><button type="button" name="button" class="socialButton">vk</button></li>
-                        <li><button type="button" name="button" class="socialButton">tg</button></li>
-                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
                     </ul>
                 </div>
         </footer>
