--- a/html/lessons.html
+++ b/html/lessons.html
@@ -23,7 +23,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
@@ -33,68 +33,68 @@
         <h1>Уроки</h1>
         <div class="lessons">
             <div class="lesson">
-                <div class="textLesson">
+                <div class="text-lesson">
                     Урок 1
                 </div>
                 <div>
                     <h2>Вступление</h2>
                 </div>
-                <div class="textLesson">
+                <div class="text-lesson">
                     00:06:39
                 </div>
             </div>
             <div class="lesson">
-                <div class="textLesson">
+                <div class="text-lesson">
                     Урок 2
                 </div>
                 <div>
                     <h2>Сторителлинг. Интро недели</h2>
                 </div>
-                <div class="textLesson">
+                <div class="text-lesson">
                     00:06:39
                 </div>
             </div>
             <div class="lesson">
-                <div class="textLesson">
+                <div class="text-lesson">
                     Урок 3
                 </div>
                 <div>
                     <h2>Как создавать логотипы</h2>
                 </div>
-                <div class="textLesson">
+                <div class="text-lesson">
                     00:06:39
                 </div>
             </div>
             <div class="lesson">
-                <div class="textLesson">
+                <div class="text-lesson">
                     Урок 4
                 </div>
                 <div>
                     <h2>Как создавать логотипы</h2>
                 </div>
-                <div class="textLesson">
+                <div class="text-lesson">
                     00:06:39
                 </div>
             </div>
             <div class="lesson">
-                <div class="textLesson">
+                <div class="text-lesson">
                     Урок 5
                 </div>
                 <div>
                     <h2>Как создавать логотипы</h2>
                 </div>
-                <div class="textLesson">
+                <div class="text-lesson">
                     00:06:39
                 </div>
             </div>
             <div class="lesson">
-                <div class="textLesson">
+                <div class="text-lesson">
                     Урок 6
                 </div>
                 <div>
                     <h2>Как создавать логотипы</h2>
                 </div>
-                <div class="textLesson">
+                <div class="text-lesson">
                     00:06:39
                 </div>
             </div>
@@ -107,9 +107,9 @@
                         +7 999 954-77-82 <br>
                         pochta@gmail.com
                     </li>
-                    <li><button type="button" name="button" class="socialButton">vk</button></li>
-                    <li><button type="button" name="button" class="socialButton">tg</button></li>
-                    <li><button type="button" name="button" class="socialButton">wa</button></li>
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
                     <li class="nav-item">
                         Политика <br> конфиденциальности
                     </li>
