--- a/html/news.html
+++ b/html/news.html
@@ -44,19 +44,19 @@
                         <li class="nav-item">
                             <a class="nav-link" href="#">Контакты</a>
                         </li>
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="headNews">
+        <div class="head-news">
             20.11.2022
             <h1>Компания Google: история создания и путь к успеху</h1>
             Время чтения: 3 минуты
         </div>
-        <div class="textNews">
+        <div class="text-news">
             Все началось в 1996 году. Аспиранты Стэнфордского университета Ларри Пейдж и Сергей Брин начали работу над собственным проектом поисковой системы. Сергей, к слову, уроженец Москвы. В 6 лет он с родителями переехал в штат Мэриленд, где его
             отец впоследствии занимался преподавательской деятельностью.<br><br>
             Научная работа молодых аспирантов заключалась в разработке новых принципов поиска информации
@@ -66,8 +66,11 @@
             алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
             Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.
         </div>
-        <img src="../images/newsFirstImg.png" class="img-fluid" alt="First Img">
-        <div class="textNews">
+        <div class="img-gradient">
+          <img src="../images/newsFirstImg.png" class="img-fluid"  alt="First Img">
+        </div>
+
+        <div class="text-news">
             <h1><b>Первые успехи</b>
             </h1>
             Все началось в 1996 году. Аспиранты Стэнфордского университета Ларри Пейдж и Сергей Брин начали работу над собственным проектом поисковой системы. Сергей, к слову, уроженец Москвы. В 6 лет он с родителями переехал в штат Мэриленд, где его
@@ -79,25 +82,28 @@
             алгоритм PageRank. Этот механизм до сих пор успешно работает. Благодаря алгоритму пользовательские запросы стали обрабатываться намного эффективнее.<br><br>
             Увидев положительные результаты, Пейдж и Брин решили создать собственную поисковую систему. В 1997 году они зарегистрировали домен google.com, а также разработали дизайн своего поисковика.<br><br>
         </div>
-        <img src="../images/newsSecondImg.png" class="img-fluid mb-5" alt="Second Img">
-        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
+        <div class="img-gradient">
+            <img src="../images/newsSecondImg.png" class="img-fluid" alt="Second Img">
+        </div>
+
+        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-5">
             <div class="container">
-                <div class="computerFooter">
+                <div class="computer-footer">
                     <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
                         <li>EDUSTRUM</li>
                         <li class="nav-item">
                             +7 999 954-77-82 <br>
                             pochta@gmail.com
                         </li>
-                        <li><button type="button" name="button" class="socialButton">vk</button></li>
-                        <li><button type="button" name="button" class="socialButton">tg</button></li>
-                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
                         <li class="nav-item">
                             Политика <br> конфиденциальности
                         </li>
                     </ul>
                 </div>
-                <div class="mobileFooter">
+                <div class="mobile-footer">
                     <div class="mt-3">
                         EDUSTRUM
                     </div>
@@ -120,9 +126,9 @@
                         </div>
                     </div>
                     <ul class="nav justify-content-start flex-row mb-3 gap-4">
-                        <li><button type="button" name="button" class="socialButton">vk</button></li>
-                        <li><button type="button" name="button" class="socialButton">tg</button></li>
-                        <li><button type="button" name="button" class="socialButton">wa</button></li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
                     </ul>
                 </div>
         </footer>
