--- a/html/pageCourse.html
+++ b/html/pageCourse.html
@@ -6,9 +6,9 @@
     <title>Страница курса</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/userCoursePage/main.css">
-    <link rel="stylesheet" href="../src/css/userCoursePage/teachers.css">
-    <link rel="stylesheet" href="../src/css/userCoursePage/modules.css">
+    <link rel="stylesheet" href="../src/css/user-coursePage/main.css">
+    <link rel="stylesheet" href="../src/css/user-coursePage/teachers.css">
+    <link rel="stylesheet" href="../src/css/user-coursePage/modules.css">
 </head>
 
 <body>
@@ -25,26 +25,26 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
-            <div class="courseFace">
-                <div class="descriptionCourse">
+            <div class="course-face">
+                <div class="description-course">
 
                     <div >
                         Курс
                         <h1>Графический дизайнер с нуля до PRO</h1>
                     </div>
 
-                    <div class="textCourse">
+                    <div class="text-course">
                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                     </div>
                     <div>
-                        <button type="button" name="button" class="greenButton">Начать обучение</button>
+                        <button type="button" name="button" class="green-button">Начать обучение</button>
                     </div>
 
                 </div>
@@ -52,16 +52,16 @@
             </div>
             <div class="info">
                 <ul>
-                    <li>Длительность <br> <span class="addInfo">8 месяцев</span></li>
+                    <li>Длительность <br> <span class="add-info">8 месяцев</span></li>
 
-                    <li>Онлайн <br> <span class="addInfo">в удобное время</span></li>
+                    <li>Онлайн <br> <span class="add-info">в удобное время</span></li>
 
-                    <li>Практика <br> <span class="addInfo">во время курса</span></li>
+                    <li>Практика <br> <span class="add-info">во время курса</span></li>
 
-                    <li>Доступ к курсу <br> <span class="addInfo">навсегда</span></li>
+                    <li>Доступ к курсу <br> <span class="add-info">навсегда</span></li>
 
                 </ul>
-                <div class="textInfo">
+                <div class="text-info">
                     <b>Графический дизайнер</b> создаёт фирменный стиль компании: рисует логотипы, подбирает паттерны и шрифты. Оформляет печатную продукцию — постеры, брошюры, флаеры
                     и презентации.<br><br>
                     Работа графическим дизайнером — это симбиоз творчества и функционального подхода. С помощью классных визуальных решений вы будете создавать графику, которая точно передаст характер бренда и поможет людям узнать компанию среди сотен
@@ -71,37 +71,37 @@
             <h1>Преподаватели</h1>
             <div class="teachers">
                 <div class="teacher">
-                    <div class="">
+                    <div>
                         <img src="../images/avatar.png" alt="avatar">
                     </div>
-                    <div class="">
+                    <div>
                         <h2>Иван Иванов</h2>
                         <p>Графический дизайнер</p>
                     </div>
                 </div>
                 <div class="teacher">
-                    <div class="logoTeacher">
+                    <div class="logo-teacher">
                         <img src="../images/avatar.png" alt="avatar">
                     </div>
-                    <div class="textTeacher">
+                    <div class="text-teacher">
                         <h2>Иван Иванов</h2>
                         <p>Графический дизайнер</p>
                     </div>
                 </div>
                 <div class="teacher">
-                    <div class="logoTeacher">
+                    <div class="logo-teacher">
                         <img src="../images/avatar.png" alt="avatar">
                     </div>
-                    <div class="textTeacher">
+                    <div class="text-teacher">
                         <h2>Иван Иванов</h2>
                         <p>Графический дизайнер</p>
                     </div>
                 </div>
                 <div class="teacher">
-                    <div class="logoTeacher">
+                    <div class="logo-teacher">
                         <img src="../images/avatar.png" alt="avatar">
                     </div>
-                    <div class="textTeacher">
+                    <div class="text-teacher">
                         <h2>Иван Иванов</h2>
                         <p>Графический дизайнер</p>
                     </div>
@@ -110,37 +110,37 @@
             <h1>Образовательные модули</h1>
             <div class="modules">
                 <div class="module">
-                    <div class="descriptionModule">
+                    <div class="description-module">
                         <div>
                             Модуль 1
                         </div>
                         <h1>Вступление. Разбор профессии дизайнера</h1>
-                        <div class="textModule">
+                        <div class="text-module">
                             Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                         </div>
                         <div>
-                            <button class="greenButton" type="button" name="button">Начать обучение</button>
+                            <button class="green-button" type="button" name="button">Начать обучение</button>
                         </div>
                     </div>
-                    <div class="modulePicture">
-                        <img src="../images/modulePicture.png" alt="Face">
+                    <div class="module-picture">
+                        <img src="../images/module-picture.png" alt="Face">
                     </div>
                 </div>
                 <div class="module">
-                    <div class="descriptionModule">
+                    <div class="description-module">
                         <div>
                             Модуль 2
                         </div>
                         <h1>Основы Illustrator и Photoshop</h1>
-                        <div class="textModule">
+                        <div class="text-module">
                             Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                         </div>
                         <div>
-                            <button class="greenButton" type="button" name="button">Начать обучение</button>
+                            <button class="green-button" type="button" name="button">Начать обучение</button>
                         </div>
                     </div>
-                    <div class="modulePicture">
-                        <img src="../images/modulePicture.png" alt="Face">
+                    <div class="module-picture">
+                        <img src="../images/module-picture.png" alt="Face">
                     </div>
                 </div>
             </div>
@@ -152,9 +152,9 @@
                         +7 999 954-77-82 <br>
                         pochta@gmail.com
                     </li>
-                    <li><button type="button" name="button" class="socialButton">vk</button></li>
-                    <li><button type="button" name="button" class="socialButton">tg</button></li>
-                    <li><button type="button" name="button" class="socialButton">wa</button></li>
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
                     <li class="nav-item">
                         Политика <br> конфиденциальности
                     </li>
