--- a/html/userLesson.html
+++ b/html/userLesson.html
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
@@ -34,27 +34,27 @@
         </nav>
     </div>
     <div class="container">
-        <div class="infoLesson">
-            <div class="headLesson">
+        <div class="info-lesson">
+            <div class="head-lesson">
                 <p>Урок 2</p>
                 <h1>Сторителлинг. Интро недели</h1>
                 <p>00:06:39</p>
             </div>
             <img src="../images/video.png" class="img-fluid w-100" alt="video">
-            <div class="descriptionLesson">
+            <div class="description-lesson">
                 <div class="description">
-                    <div class="descriptionTitle">
+                    <div class="description-title">
                         Описание
                     </div>
-                    <div class="descriptionText">
+                    <div class="description-text">
                         В этом уроке поговорим о графическом редакторе, лалалал алалал лалалалалаалал алалалл алалалалалалла лалалалалалалалала ллалалалалалалал аллалалал алалалалл алалалалалал аллалалалл алаллалалаала лаллалалла лалла лала.
                     </div>
                 </div>
                 <div class="description">
-                    <div class="descriptionTitle">
+                    <div class="description-title">
                         Таймкоды
                     </div>
-                    <div class="descriptionText">
+                    <div class="description-text">
                         <div>
                             00.05: Что такое Photoshop и его функции
                         </div>
@@ -79,31 +79,31 @@
 
         </div>
     </div>
-    <div class="homeworkDescription">
+    <div class="homework-description">
         <div class="container">
-            <div class="descriptionLesson">
+            <div class="description-lesson">
                 <div class="description">
-                    <div class="descriptionTitleHomework">
+                    <div class="description-title-homework">
                         Домашнее задание
                     </div>
-                    <div class="descriptionTextHomework">
+                    <div class="description-text-homework">
                         Выбрать одну из предложенных историй для проекта блаблабла.
                     </div>
                 </div>
                 <div class="description">
-                    <div class="descriptionTitle">
+                    <div class="description-title">
                         Описание
                     </div>
-                    <div class="descriptionTextHomework">
+                    <div class="description-text-homework">
                         Выбрать одну из предложенных историй для проекта блаблабла.
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="homeworkSend">
+    <div class="homework-send">
         <div class="container">
-            <div class="formHomework">
+            <div class="homework-form">
                 <form>
                     <legend class="headForm">Загрузка ДЗ</legend>
                     <div class="mb-3">
@@ -112,14 +112,14 @@
                     <div class="linkInput">
                         <input placeholder="Ссылка" class="form-control" id="link">
                     </div>
-                    <button type="button" class="buttonSignIn" name="button">Отправить на проверку</button>
+                    <button type="button" class="button-signin" name="button">Отправить на проверку</button>
                 </form>
                 <div class="files">
-                    <div class="headFiles">
+                    <div class="head-files">
                         <h2>Файлы</h2>
                         <button type="button" class="add" name="button">Добавить</button>
                     </div>
-                    <div class="filesText">
+                    <div class="text-files">
                         После отправки работа появится здесь
                     </div>
                 </div>
@@ -135,9 +135,9 @@
                         +7 999 954-77-82 <br>
                         pochta@gmail.com
                     </li>
-                    <li><button type="button" name="button" class="socialButton">vk</button></li>
-                    <li><button type="button" name="button" class="socialButton">tg</button></li>
-                    <li><button type="button" name="button" class="socialButton">wa</button></li>
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
                     <li class="nav-item">
                         Политика <br> конфиденциальности
                     </li>
