--- a/html/Auth/password.html
+++ b/html/Auth/password.html
@@ -24,15 +24,15 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="signInBlock">
-            <div class="formSignIn">
+        <div class="signin-block">
+            <div class="signin-form">
                 <form>
                     <legend class="mb-4">Придумайте пароль</legend>
                     <div class="mb-3">
@@ -41,13 +41,13 @@
                     <div class="mb-4">
                         <input type="password" placeholder="Повторите пароль" class="form-control" id="exampleInputPassword1">
                     </div>
-                    <button type="submit" class="buttonSignIn">Дальше</button>
-                    <div class="noRegistaration">
+                    <button type="submit" class="button-signin">Дальше</button>
+                    <div class="no-registaration">
                         или <u>войдите</u>
                     </div>
                 </form>
             </div>
-            <div class="blockWithImage">
+            <div class="block-with-image">
                 <h1>Узнавайте новое c Edusturm</h1>
                 <p>Авторизуйтесь, чтобы начать заниматься</p>
                 <img src="../../images/signInImage.png" alt="Idea">
@@ -61,9 +61,9 @@
                         +7 999 954-77-82 <br>
                         pochta@gmail.com
                     </li>
-                    <li><button type="button" name="button" class="socialButton">vk</button></li>
-                    <li><button type="button" name="button" class="socialButton">tg</button></li>
-                    <li><button type="button" name="button" class="socialButton">wa</button></li>
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
                     <li class="nav-item">
                         Политика <br> конфиденциальности
                     </li>
