--- a/html/PersonalAccount/personalAccountPayment.html
+++ b/html/PersonalAccount/personalAccountPayment.html
@@ -24,14 +24,14 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
                 </div>
             </div>
         </nav>
-        <div class="personalAccountBody">
+        <div class="personal-account-body">
             <ul class="list-group list-group-flush">
                 <li class="list-group-item"><a href="#">Настройки профиля</a></li>
                 <li class="list-group-item"><a href="#">Подписки</a></li>
@@ -39,11 +39,11 @@
                 <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                 <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
             </ul>
-            <div class="contentPersonalAccount">
+            <div class="content-personal-account">
                 <h2 class="mb-4">История оплат</h2>
                 <div class="payments">
                     <div class="payment">
-                        <div class="dateSubscription">
+                        <div class="date-subscription">
                             <h2>Подписка БРО</h2>
                             01.12 - 31.12
                         </div>
@@ -52,7 +52,7 @@
                         </div>
                     </div>
                     <div class="payment">
-                        <div class="dateSubscription">
+                        <div class="date-subscription">
                             <h2>Подписка БРО</h2>
                             01.12 - 31.12
                         </div>
@@ -61,7 +61,7 @@
                         </div>
                     </div>
                     <div class="payment">
-                        <div class="dateSubscription">
+                        <div class="date-subscription">
                             <h2>Подписка БРО</h2>
                             01.12 - 31.12
                         </div>
@@ -82,9 +82,9 @@
                         +7 999 954-77-82 <br>
                         pochta@gmail.com
                     </li>
-                    <li><button type="button" name="button" class="socialButton">vk</button></li>
-                    <li><button type="button" name="button" class="socialButton">tg</button></li>
-                    <li><button type="button" name="button" class="socialButton">wa</button></li>
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
                     <li class="nav-item">
                         Политика <br> конфиденциальности
                     </li>
