--- a/html/userCourses.html
+++ b/html/userCourses.html
@@ -7,7 +7,7 @@
     <title>Доступные курсы</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/userCourse/main.css">
+    <link rel="stylesheet" href="../src/css/user-course/main.css">
 </head>
 
 <body>
@@ -24,7 +24,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
                     <ul class="navbar-nav">
-                        <button type="button" name="button" class="profileButton">
+                        <button type="button" name="button" class="profile-button">
                             <img src="../images/profile.svg" alt="Profile">
                         </button>
                     </ul>
@@ -33,58 +33,58 @@
         </nav>
         <h1 class="mb-5 mt-5"><b>Доступные курсы</b></h1>
 
-        <div class="courseFaces">
-            <div class="courseFace">
-                <div class="descriptionCourse">
+        <div class="course-faces">
+            <div class="course-face">
+                <div class="description-course">
 
                     <div>
                         Курс
                         <h1>Графический дизайнер с нуля до PRO</h1>
                     </div>
 
-                    <div class="textCourse">
+                    <div class="text-course">
                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                     </div>
                     <div>
-                        <button type="button" name="button" class="greenButton">Начать обучение</button>
+                        <button type="button" name="button" class="green-button">Начать обучение</button>
                     </div>
 
                 </div>
                 <img src="../images/iconCourses.png" alt="Designer">
             </div>
-            <div class="courseFace">
+            <div class="course-face">
                 <div>
                     <div>
                         Курс
                         <h1>Дизайнер интерьеров с нуля до PRO</h1>
                     </div>
 
-                    <div class="textCourse">
+                    <div class="text-course">
                         Всего за несколько месяцев вы освоите перспективную и творческую профессию. Сможете устроиться в студию или брать заказы на фрилансе, даже если вы только начинаете свой путь в дизайне.
                     </div>
                     <div class="">
-                        <button type="button" name="button" class="greenButton">Начать обучение</button>
+                        <button type="button" name="button" class="green-button">Начать обучение</button>
                     </div>
                 </div>
                 <img src="../images/iconCourses.png" alt="Designer">
             </div>
-            <div class="courseFace">
+            <div class="course-face">
                 <div>
                     <div>
                         Курс
                         <h1>Excel + Google Таблицы с нуля до PRO</h1>
                     </div>
 
-                    <div class="textCourse">
+                    <div class="text-course">
                         Курс для тех, кто не любит рутину и хочет автоматизировать работу. Научитесь оперативно составлять сложные отчёты и строить прогнозы. Сможете работать в таблицах быстрее с помощью скриптов и макросов. Освободите время для других задач.
                     </div>
                     <div>
-                        <button type="button" name="button" class="greenButton">Начать обучение</button>
+                        <button type="button" name="button" class="green-button">Начать обучение</button>
                     </div>
                 </div>
                 <img src="../images/iconCourses.png" alt="Designer">
             </div>
-            <button type="button" class="buttonRate" name="button">Показать еще</button>
+            <button type="button" class="button-rate" name="button">Показать еще</button>
         </div>
         <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
@@ -94,9 +94,9 @@
                         +7 999 954-77-82 <br>
                         pochta@gmail.com
                     </li>
-                    <li><button type="button" name="button" class="socialButton">vk</button></li>
-                    <li><button type="button" name="button" class="socialButton">tg</button></li>
-                    <li><button type="button" name="button" class="socialButton">wa</button></li>
+                    <li><button type="button" name="button" class="social-button">vk</button></li>
+                    <li><button type="button" name="button" class="social-button">tg</button></li>
+                    <li><button type="button" name="button" class="social-button">wa</button></li>
                     <li class="nav-item">
                         Политика <br> конфиденциальности
                     </li>
